--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -7,7 +7,7 @@
 .hero-heading {
   color: white;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 1.9em;
   line-height: 43px;
   width: 500px;
   height: 43px;
