--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -9,7 +9,7 @@
   font-weight: 800;
   font-size: 1.9em;
   line-height: 43px;
-  width: 500px;
+  max-width: 100%;
   height: 43px;
 }
 
@@ -18,7 +18,7 @@
   font-size: 23px;
   font-weight: 800;
   line-height: 29px;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 .hero-btn {
