--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -59,11 +59,10 @@ h4 {
     object-fit: cover;
     background-repeat: no-repeat;
     filter: brightness(70%);
+    padding-top: 100px;
     height: 100vh;
-    padding-top: 80px;
-    background-position: 0 100px;
+    background-position: center 100px;
     background-size: cover;
-    background-position: top center;
   }
 
   .hero-image img {
